[package]
name = "Tokenly"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"